# aqmsp_data

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: CI.yml
aqmsp_data/: constants.py  data.py  download.py  preprocessing.py  utils.py
datasets/camx/: README.md
datasets/cpcb/: autoclick_download_new.ipynb  preprocess.ipynb  station_locations.ipynb
datasets/cpcb/ijcai24/: process_data.ipynb
datasets/cpcb/ijcai24/baselines/rf/: rf.ipynb
lab/: check_met.ipynb  check_no2.ipynb  dsc_aug_2023.ipynb  extract_lat_lon_caaqm.ipynb
manual_cache/: README.md
manual_cache/CPCB_Lat_Lon/: stations.nc.bak
notebooks/: autoclick_cpcb_download.ipynb  bernoulli-gamma-neural-processes.ipynb  combine_purpleair_california.ipynb  download_era5.ipynb  explore_processed_purpleair.ipynb  explore_purpleair_openaq.ipynb  get_purpleair_sensors.ipynb  preprocess_and_save_cpcb.ipynb  verify_purpleair_data_integrity.ipynb
tests/: test_camx.py  test_cpcb.py  test_extra.py
