[metadata]
name = aqmsp_data
author = Zeel B Patel
author-email = patel_zeel@iitgn.ac.in
description = example description
url = https://github.com/patel-zeel/aqmsp_data
license = MIT
long_description_content_type = text/markdown
long_description = file: README.md

[tool:pytest]
# check in all the directories
testpaths = "aqmsp_data/"
# check for all the files 
python_files = "*.py"
# check for all the functions starting with test
python_functions = test_*